--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -409,86 +409,86 @@ function getFocusFromURL() {
 }
   
 function showMap(focusId = null) {
-  // Tabs & Sichtbarkeit
-  document.getElementById('tab-map').classList.add('active');
-  document.getElementById('tab-list').classList.remove('active');
-  wrapEl.classList.add('active');
-  document.getElementById('list').style.display = 'none';
+  try {
+    // Tabs & Sichtbarkeit
+    document.getElementById('tab-map').classList.add('active');
+    document.getElementById('tab-list').classList.remove('active');
+    wrapEl.classList.add('active');
+    document.getElementById('list').style.display = 'none';
 
-  // Mobil: Vollbild & Höhe
-  if (isMobile()) {
-    enterMapFullscreen();
-    setFullscreenVH();
-    wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
-    enableVHWatchers();
-  }
-
-  const mapImgEl = document.querySelector('.map-img');
-
-  waitForImage(mapImgEl, () => {
-    const fit = computeFit(START_X_PERCENT);
-    const minScale = fit.scale;
-
-    // Ziel-ID bestimmen (mit Alias-Auflösung)
-    const rawId = focusId || lastFocusId || null;
-    const id = resolveId ? resolveId(rawId) : rawId;
-
-    // Panzoom einmalig initialisieren
-    if (!panzoomInstance) {
-      panzoomInstance = Panzoom(mapEl, {
-        maxScale: 4,
-        contain: 'outside',
-        startScale: fit.scale,
-        startX: fit.x,
-        startY: fit.y
-      });
-      // Wheel-Zoom (Desktop)
-      wrapEl.addEventListener('wheel', (e) => {
-        e.preventDefault();
-        panzoomInstance.zoomWithWheel(e);
-      }, { passive: false });
+    // Mobil: Vollbild & Höhe
+    if (isMobile()) {
+      enterMapFullscreen();
+      setFullscreenVH();
+      wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
+      enableVHWatchers();
     }
 
-    // minScale immer aktuell halten
-    panzoomInstance.setOptions({ minScale });
+    const mapImgEl = document.querySelector('.map-img');
 
-    // Ziel-Transform berechnen
-    let targetTf = null;
-    if (id) {
-      const TARGET_SCALE = 2.5;
-      const targetScale = Math.max(minScale, TARGET_SCALE);
-      targetTf = computeTransformForPin(id, targetScale);
-    }
-
-    // Animations-Funktion (easeInOutCosine)
-    function animateToTransform(target, duration = 400) {
-      const start = panzoomInstance.getTransform();
-      const startTime = performance.now();
-
-      function tick(now) {
-        const t = Math.min(1, (now - startTime) / duration);
-        const k = 0.5 - 0.5 * Math.cos(Math.PI * t); // easing
-        const x = start.x + (target.x - start.x) * k;
-        const y = start.y + (target.y - start.y) * k;
-        const s = start.scale + (target.scale - start.scale) * k;
-        panzoomInstance.setTransform({ x, y, scale: s });
-        if (t < 1) requestAnimationFrame(tick);
+    waitForImage(mapImgEl, () => {
+      if (typeof Panzoom !== 'function') {
+        console.error('❌ Panzoom nicht geladen');
+        return;
       }
-      requestAnimationFrame(tick);
-    }
 
-    // Anwenden
-    if (targetTf) {
-      animateToTransform(targetTf, 400);
+      const fit = computeFit(START_X_PERCENT);
+      const minScale = fit.scale;
+
+      const rawId = focusId || lastFocusId || null;
+      const id = resolveId ? resolveId(rawId) : rawId;
+      console.log('[MAP] showMap()', { rawId, id, fit, minScale });
+
+      // Init einmalig
+      if (!panzoomInstance) {
+        panzoomInstance = Panzoom(mapEl, {
+          maxScale: 4,
+          contain: 'outside',
+          startScale: fit.scale,
+          startX: fit.x,
+          startY: fit.y
+        });
+        wrapEl.addEventListener('wheel', (e) => { e.preventDefault(); panzoomInstance.zoomWithWheel(e); }, { passive: false });
+        console.log('[MAP] panzoom init', panzoomInstance.getTransform());
+      } else {
+        console.log('[MAP] panzoom reuse', panzoomInstance.getTransform());
+      }
+
+      panzoomInstance.setOptions({ minScale, animate: false });
+
+      // --- Harte Diagnose: Nudge, damit wir Bewegung sehen ---
+      const nudge = { x: fit.x + 1, y: fit.y + 1, scale: fit.scale };
+      panzoomInstance.setTransform(nudge);
+      panzoomInstance.setTransform(fit);
+      console.log('[MAP] nudge+fit applied');
+
+      if (!id) {
+        panzoomInstance.setTransform(fit);
+        console.log('[MAP] no id → fit');
+        return;
+      }
+
+      // Ziel berechnen
+      const tf = computeTransformForPin(id, Math.max(2.5, minScale));
+      console.log('[MAP] target transform', id, tf);
+
+      if (!tf) {
+        console.warn('⚠️ computeTransformForPin liefert null für', id);
+        panzoomInstance.setTransform(fit);
+        return;
+      }
+
+      // Jetzt HART setzen (ohne Animation) – damit es auf jeden Fall sichtbar ist
+      panzoomInstance.setTransform(tf);
       lastFocusId = id;
       highlightPin && highlightPin(id);
-      console.log(`🔍 Focus ${id}`, targetTf);
-    } else {
-      animateToTransform(fit, 400);
-      if (id) console.warn('⚠️ Pin nicht gefunden oder ohne Koordinaten:', id);
-    }
-  });
+      console.log('✅ jumped to', id, tf);
+    });
+  } catch (err) {
+    console.error('❌ showMap error', err);
+  }
 }
+
 
 
   /* ====== LISTE & DATEN ====== */
@@ -626,55 +626,41 @@ function renderList(areaIds){
   /* ====== Pin-Fokus ====== */
 
 
-// Mittelpunkt eines Pins in Kartenkoordinaten berechnen
 function getPinCenter(id) {
   const el = document.getElementById(`pin-${id}`);
-  if (!el) return null;
+  if (!el) { console.warn('❌ pin nicht gefunden:', id); return null; }
 
-  // Koordinaten aus den Datenattributen lesen
+  // 1) Datenattribute
   let xPct = parseFloat(el.dataset.x);
   let yPct = parseFloat(el.dataset.y);
-  let wPct = parseFloat(el.dataset.wp);
 
-  // Falls data-wp nicht gesetzt: Standardbreite 3.05% (wie deine Icons bisher)
-  if (Number.isNaN(wPct)) wPct = 3.05;
+  // 2) Fallback: inline styles (in %)
+  if (Number.isNaN(xPct) || Number.isNaN(yPct)) {
+    const ls = el.style.left?.trim() || '';
+    const ts = el.style.top?.trim()  || '';
+    xPct = parseFloat(ls.replace('%',''));
+    yPct = parseFloat(ts.replace('%',''));
+  }
 
-  // Umrechnung in Pixel-Koordinaten (auf Basis deiner MAP_W / MAP_H)
-  const wPx = (wPct / 100) * MAP_W;
-  const hPx = wPx * 0.70; // Höhe = ca. 70% der Breite
+  if (Number.isNaN(xPct) || Number.isNaN(yPct)) {
+    console.warn('❌ keine gültigen Koordinaten für', id, { xPct, yPct, el });
+    return null;
+  }
 
-  const cx = (xPct / 100) * MAP_W + wPx / 2;
-  const cy = (yPct / 100) * MAP_H + hPx / 2;
+  // reale Pin-Größe (vor Transform)
+  const wPx = el.offsetWidth  || (MAP_W * 0.0305); // Fallback: 3.05% von MAP_W
+  const hPx = el.offsetHeight || wPx * 0.70;
 
+  // Mittelpunkt in Kartenkoordinaten
+  const baseX = (xPct / 100) * MAP_W;
+  const baseY = (yPct / 100) * MAP_H;
+  const cx = baseX + wPx / 2;
+  const cy = baseY + hPx / 2;
+
+  console.log('[MAP] getPinCenter', { id, xPct, yPct, wPx, hPx, cx, cy });
   return { cx, cy };
 }
 
-function focusPinNoAnim(id, targetScale = 2.5) {
-  const c = getPinCenter(id);
-  if (!c || Number.isNaN(c.cx) || Number.isNaN(c.cy)) {
-    console.warn('⚠️ getPinCenter liefert nichts/NaN für', id, c);
-    return;
-  }
-  const rect = wrapEl.getBoundingClientRect();
-  const scale = Math.max((rect.width / MAP_W), (rect.height / MAP_H), targetScale);
-  const viewCx = rect.width  / 2;
-  const viewCy = rect.height / 2;
-
-  let x = viewCx - c.cx * scale;
-  let y = viewCy - c.cy * scale;
-
-  // clamp
-  const minX = rect.width  - MAP_W * scale;
-  const minY = rect.height - MAP_H * scale;
-  x = Math.min(0, Math.max(minX, x));
-  y = Math.min(0, Math.max(minY, y));
-
-  // Direkt setzen (keine Animation) → sollte SOFORT springen
-  panzoomInstance.setOptions({ animate: false });
-  panzoomInstance.setTransform({ x, y, scale });
-
-  console.log('✅ focusPinNoAnim', { id, cx: c.cx, cy: c.cy, x, y, scale });
-}
 
   /* ====== Start ====== */
   render();
@@ -682,6 +668,7 @@ function focusPinNoAnim(id, targetScale = 2.5) {
 </script>
 </body>
 </html>
+
 
 
 
